# operetta-compose

./: .copier-answers.yml  .gitignore  .nojekyll  LICENSE  README.md  contributing.html  converter.ipynb  index.html  installation.html  napari.html  pyproject.toml  robots.txt  search.json  sitemap.xml  vizarr.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_docs.yml  docs.yml  release.yml
api/: index.html  io.OmeZarrUrl.html  io.condition_to_ome_zarr.html  io.convert_ROI_table_to_indices.html  io.features_to_ome_zarr.html  io.get_roi.html  io.labels_to_ome_zarr.html  io.load_intensity_roi.html  io.load_label_roi.html  io.parse_zarr_url.html  io.read_ome_zarr.html  tasks.condition_registration.html  tasks.feature_classification.html  tasks.harmony_to_ome_zarr.harmony_to_ome_zarr.html  tasks.harmony_to_ome_zarr.html  tasks.label_prediction.html  tasks.regionprops_measurement.html  tasks.stardist_segmentation.html  utils.OmeZarrUrl.html  utils.alpha_to_numeric.html  utils.colorbrewer.html  utils.numeric_to_alpha.html  utils.parse_zarr_url.html
docs/: _quarto.yml  contributing.qmd  index.qmd  installation.qmd  napari.ipynb  objects.json  vizarr.ipynb
docs/api/: index.qmd  io.OmeZarrUrl.qmd  io.condition_to_ome_zarr.qmd  io.convert_ROI_table_to_indices.qmd  io.features_to_ome_zarr.qmd  io.get_roi.qmd  io.labels_to_ome_zarr.qmd  io.load_label_roi.qmd  (+15 more)
tests/: __init__.py  classifier.pkl  drug_layout.csv  test_compose.py  test_thresholding_label_task.py  test_valid_args_schemas.py
(+29 files in other folders)
