# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "operio-fractal"
version = "0.0.1"
description = "Fractal tasks for the Opera/Operetta microscope and drug response profiling"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Fabio Steffen", email = "fabio.steffen@uzh.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.8"
dependencies = ["fractal-tasks-core == 1.0.0a3", "scikit-image"]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "pytest", "requests", "build", "jsonschema"]

# Build options (see https://peps.python.org/pep-0517)
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["operio_fractal"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
